<resources>
    <string name="app_name">Magic Mirror</string>
    <string name="login_activity_phone_number_text_view_hint">Phone number</string>
    <string name="login_activity_sign_in_button_text">Sign-in</string>
    <string name="login_auth_dialog_enter_verification_code">Enter verification code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_drea_activity">Drea ai.</string>

    <string name="title_activity_signin_full_screen">Sign in</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="drea_introduction">Hi there, I\'m Drea \nI\'m here to guide you through using this app</string>
    <string name="drea_choose_user_name">Please choose a username</string>
    <string name="drea_greating">Good %1$s %2$s</string>
    <string name="drea_selfie">Could you upload a properly lit image of your face</string>
    <string name="drea_face_save_photo">Let me save that, hang on…\nPhoto saved successfully\n\nWhat is your face shape</string>
    <string name="drea_face_shape">What is your face shape</string>
    <string name="drea_complexion">What is your complexion</string>
    <string name="drea_creating_profile">Creating your profile\nPlease wait…</string>
    <string name="drea_profile_created">Your profile has been created</string>
    <string name="pick_image_intent_text">Select selfie image</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="feed_activty_magic_feed_label">Magic Feed</string>
    <string name="title_activity_feed_page">Magic Feed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="user_proflie_activity_name">Magic Profile</string>
    <string name="title_activity_admin">Admin console</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="uploaded_image_counter">%1$d/%2$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="sign_in_activity_google_sign_in_button_label">Sign in with Google</string>
    <string name="sign_in_activity_sign_in_with_phone_number_button_label">Sign in with Phone number</string>
    <string name="sign_in_activity_by_signing_in_i_accept_magicmirror_ai_text_view_label">By signing in, I accept MagicMirror.ai</string>
    <string name="sing_in_activity_terms_of_service_and_privacy_policy_button_label">Terms of service and privacy policy</string>
    <!--<string name="uploaded_image_percent">%1$d\%</string>-->


</resources>
